fixed issue on home page where random number generator was overflowing beyond array length. fixed issue where random characters and comics were repeating on home page. adjusted padding on item listing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -102,7 +102,7 @@ h3.marvel {
 }
 
 .comic-listing {
-	padding: 60px 15px;
+	padding: 40px 15px;
 }
 
 
@@ -179,6 +179,7 @@ header {
 // Featured Styles
 // --------------------------------------------------
 .featured {
+	padding-bottom: 40px;
 
 	img {
 		width: 100%;
